--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.1",
   "description": "Toolkit for all api that poscon expose to the public ",
   "main": "api.js ",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bgiorgio0506/poscon-api-toolkit.git"
+  },
+  "homepage": "https://github.com/bgiorgio0506/poscon-api-toolkit/blob/main/readme.md",
   "scripts": {
     "test": "jest --watchAll",
     "test:ci": "jest --coverage",
